cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 14)

add_library(LibPaths STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LibPaths.cpp)
add_library(LibLOG STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LibLOG.cpp)
add_library(LibSettings STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LibSettings.cpp)
add_library(LibDAT STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LibDAT.cpp)
add_library(LibValidator STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LibValidator.cpp)
add_library(LibBrowser STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LibBrowser.cpp)

target_include_directories(LibPaths PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LibLOG PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LibSettings PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LibDAT PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LibValidator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LibBrowser PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)