cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 14)

add_library(FilePaths STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/FilePaths.cpp)
add_library(LOG STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LOG.cpp)
add_library(ManageSettings STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/ManageSettings.cpp)
add_library(DAT STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/DAT.cpp)
add_library(Validator STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/Validator.cpp)
add_library(Browser STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/Browser.cpp)

target_include_directories(FilePaths PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LOG PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(ManageSettings PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(DAT PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(Validator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(Browser PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)