cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 14)

add_library(FilePathsManager STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/FilePathsManager.cpp)
add_library(LOGManager STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/LOGManager.cpp)
add_library(SettingsManager STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/SettingsManager.cpp)
add_library(DATManager STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/DATManager.cpp)
add_library(ValidateManager STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/ValidateManager.cpp)
add_library(BrowserManager STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/BrowserManager.cpp)

target_include_directories(FilePathsManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(LOGManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(SettingsManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(DATManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(ValidateManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
target_include_directories(BrowserManager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)